--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# mcbc-react\.gitignore
 # Logs
 logs
 *.log
@@ -7,10 +8,17 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Node modules
 node_modules
+
+# Build directories
 dist
 dist-ssr
+build
+
+# Local env files
 *.local
+.env
 
 # Editor directories and files
 .vscode/*
@@ -22,3 +30,24 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Misc files
+NOTES.md
+TODO.md
+
+# Test coverage
+coverage
+*.lcov
+
+# Temporary files
+.cache
+
+# Tailwind CSS JIT generated files
+tailwind.config.js
+
+# Production build
+vite.config.js
+
+# Lockfiles
+yarn.lock
+package-lock.json
