--- a/.babelrc
+++ b/.babelrc
@@ -4,5 +4,6 @@
         ["@babel/preset-react", {
             "runtime": "automatic"
     }]
-    ]
+    ],
+    "plugins": ["babel-plugin-transform-import-meta", "@babel/plugin-transform-runtime"]
 }
