--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,6 @@
     "useTabs": false,
     "printWidth": 80,
     "arrowParens": "always",
-    "trailingComma": "all"
+    "trailingComma": "all",
+    "endOfLine": "lf"
 }
