--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "format": "prettier --write .",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint . --fix",
-    "test": "jest",
     "dev": "vite",
     "build": "vite build",
     "postcss": "postcss src/styles/global.css -o dist/styles.css",
@@ -55,6 +54,7 @@
   "devDependencies": {
     "@babel/core": "^7.24.9",
     "@babel/eslint-parser": "^7.25.0",
+    "@babel/plugin-transform-runtime": "^7.24.7",
     "@babel/preset-env": "^7.25.0",
     "@babel/preset-react": "^7.24.7",
     "@commitlint/cli": "^19.3.0",
@@ -107,6 +107,7 @@
     "stylelint-formatter-pretty": "^4.0.0",
     "tailwindcss": "^3.4.7",
     "vite": "^5.3.4",
-    "vite-plugin-bundle-analyzer": "^0.0.1"
+    "vite-plugin-bundle-analyzer": "^0.0.1",
+    "vite-plugin-environment": "^1.1.3"
   }
 }
