--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "dotenv": "^16.4.5",
     "formik": "^2.4.6",
     "framer-motion": "^11.3.18",
-    "helmet": "^7.1.0",
     "i18next": "^23.12.2",
     "localforage": "^1.10.0",
     "markdown-to-jsx": "^7.4.7",
@@ -42,7 +41,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-grid-layout": "^1.4.4",
-    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-router-dom": "^6.25.1",
     "react-table": "^7.8.0",
     "sort-by": "^1.2.0",
