--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
     "@eslint/js": "^9.8.0",
+    "@reduxjs/toolkit": "^2.2.7",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/container-queries": "^0.1.1",
     "@tailwindcss/forms": "^0.5.7",
@@ -87,8 +88,6 @@
     "jest-environment-jsdom": "^29.7.0",
     "jest-transform-stub": "^2.0.0",
     "lint-staged": "^15.2.7",
-    "mobx": "^6.13.1",
-    "mobx-react": "^9.1.1",
     "postcss": "^8.4.40",
     "postcss-apply": "^0.12.0",
     "postcss-custom-media": "^10.0.8",
@@ -99,7 +98,9 @@
     "postcss-preset-env": "^9.6.0",
     "prettier": "^3.3.3",
     "react-icons": "^5.2.1",
+    "react-redux": "^9.1.2",
     "react-responsive": "^10.0.0",
+    "redux": "^5.0.1",
     "serve": "^14.2.3",
     "stylelint": "^16.7.0",
     "stylelint-config-standard": "^36.0.1",
